tests/derive_ui/skip_without_default.stderr
error[E0277]: the trait bound `Kind: Default` is not satisfied
  --> tests/derive_ui/skip_without_default.rs:22:11
   |
22 |     #[arg(skip)]
   |           ^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `Kind`
  --> tests/derive_ui/skip_without_default.rs:12:1
   |
12 | enum Kind {
   | ^^^^^^^^^
